Different fix for overflow

--- a/bc/static_src/sass/components/_promo-event-listing.scss
+++ b/bc/static_src/sass/components/_promo-event-listing.scss
@@ -5,7 +5,6 @@
     padding: 90px 0 50px;
     transform: translateX(-50%);
     width: 100%;
-    overflow: hidden;
 
     @include media-query(tablet-landscape) {
         padding: 185px 0 100px;
